--- a/WorkerEntry/WorkerEntry/WorkerEntry.vbproj
+++ b/WorkerEntry/WorkerEntry/WorkerEntry.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="ListPage.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MemberProperty.vb" />
     <Compile Include="TopMenu.vb">
       <SubType>Form</SubType>
     </Compile>
